--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     ext{
         kotlin_version = "1.4.10"
         navigation_version = "1.0.0"
+        glide_version = "4.8.0"
+        moshi_version = "1.8.0"
+        retrofit_version = "2.9.0"
     }
     repositories {
         google()
