--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         glide_version = "4.8.0"
         moshi_version = "1.8.0"
         retrofit_version = "2.9.0"
+        livedata_version = "2.2.0"
     }
     repositories {
         google()
@@ -15,6 +16,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
     }
 }
 
