--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.1"
+        //classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
     }
 }
