--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         moshi_version = "1.8.0"
         retrofit_version = "2.9.0"
         livedata_version = "2.2.0"
+        room_version = "2.3.0-alpha03"
     }
     repositories {
         google()
